# RTES_Rover

./: README.md  analyze_e2e_safety_latency.py  analyze_full_physical_stop_latency.py  analyze_mt_cheddar_wca.py  analyze_mt_performance.py  analyze_mt_request_completion.py  analyze_mt_timing_chain.py  analyze_mt_trace_integrity.py  emergency_stop.c  emergency_stop_node.cpp  full_system_mt.launch.py  motor_control.c  motor_control_node.cpp  path_planner.c  path_planner_node.cpp  realtime_system_node.cpp  realtime_system_node_mt.cpp  realtime_systemnode_mt.cpp  rtesperformancedata.csv  trashbot_motor_driver_rtes.ino  ultrasonic_hcsr04.cpp  ultrasonic_hcsr04_rt.cpp
RTES/: BUILD_SOLUTIONS.md  CMakeLists.txt  README.md  build_and_test.sh  build_and_test_safe.sh  build_minimal.sh  package.xml
RTES/docs/: RT_CONFIGURATION.md
RTES/include/: emergency_stop.h  motor_control.h  path_planner.h  safety_types.h
RTES/launch/: full_system.launch.py  test_services.launch.py
RTES/scripts/: analyze_performance.py  isolate_cpu.sh  restore_cpus.sh  verify_rt_config.sh
RTES/src/: emergency_stop.c  emergency_stop_node.cpp  motor_control_node.cpp  path_planner.c  path_planner_node.cpp  realtime_system_node.cpp
RTES/test/: test_emergency.c
